# Val-Diff

./: .gitignore  gis_visualization.py  laces_engine.py  otl_versions_config.xlsx  requirements.txt  streamlit_app.py  version_comparator.py  ~$otl_versions_config.xlsx
.streamlit/: secrets.toml
RDF-PythonSnippets-main/: .gitignore  README.md  TODO.md
RDF-PythonSnippets-main/Client_configs/TenneT/TenneT - VS2/: EU-303VS2 - Conceptual Specifications.sparql  EU-303VS2 - Groups Taxonomy.sparql  EU-303VS2 - Groups.sparql  EU-303VS2 - Requirements General Info.sparql  EU-303VS2 - Requirements Taxonomy.sparql  config.yml
RDF-PythonSnippets-main/Client_configs/TenneT/TenneT-AMT/: TennetAMTeisen1.sparql  TennetAMTeisen2.sparql  TennetAMTeisen3.sparql  TennetAMTeisen4.sparql  TennetAMTeisen5.1.sparql  TennetAMTeisen5.10.sparql  TennetAMTeisen5.11.sparql  TennetAMTeisen5.12.sparql  TennetAMTeisen5.13.sparql  TennetAMTeisen5.14.sparql  TennetAMTeisen5.15.sparql  TennetAMTeisen5.16.sparql  TennetAMTeisen5.17.sparql  TennetAMTeisen5.18.sparql  TennetAMTeisen5.19.sparql  TennetAMTeisen5.2.sparql  TennetAMTeisen5.20.sparql  TennetAMTeisen5.21.sparql  TennetAMTeisen5.22.sparql  TennetAMTeisen5.23.sparql  config.yml  (+19 more)
RDF-PythonSnippets-main/Example_folder/: aspect.sparql  config.yml  objects.sparql  output_file.xlsx
RDF-PythonSnippets-main/sparql_diff/: Design.md  LICENCE  README.md  pyproject.toml  requirements.txt
RDF-PythonSnippets-main/sparql_diff/src/: diff_checker.py  laces_request.py
graph/: config.yml  output_file.xlsx
queries/: objects.sparql  summary.sparql
(+8 files in other folders)
